# streamlit_notebook

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  all.txt  compil.py  deploy.py  docs.md  packages.txt  pyproject.toml  requirements.txt  setup.py  test.py  test_adict.py  test_notebook.stnb
docs/: README.md  api_reference.rst  conf.py  index.rst  requirements.txt
streamlit_notebook/: __init__.py  attrdict.py  cell.py  cell_types.py  cell_ui.py  echo.py  editor.py  launch_app.py  main.py  notebook.py  notebook_ui.py  shell.py  state.py  test_cell.py  utils.py
streamlit_notebook/adict/: README.md  __init__.py  _adict.py  _adict_meta.py  _collections_utils.py  _typechecker.py
streamlit_notebook/agent/: __init__.py  agent.py  ai.py  default_gitignore  get_text.py  get_webdriver.py  image.py  latex.py  message.py  simpler_get_text.py  stream_utils.py  tool.py  utils.py  voice.py
streamlit_notebook/agent/prompts/: system_prompt.txt
streamlit_notebook/core/: __init__.py  auto_play.py  cell.py  cell_types.py  cell_ui.py  chat.py  display.py  echo.py  notebook.py  notebook_ui.py  rerun.py  shell.py  templates.py  utils.py
streamlit_notebook/core/components/: __init__.py  auto_play.py  cell_ui.py  float_container.py
streamlit_notebook/demo_notebooks/: 01_getting_started.py  02_cell_types_and_reactivity.py  03_display_and_persistence.py  04_widgets_and_keys.py  05_markdown_and_interpolation.py  06_layout_modes.py  07_fragments.py  08_programmatic_api.py  09_rerun_control.py  10_deployment_and_files.py  11_ai_agent.py  README.md  data_analysis_demo.py  data_analysis_demo.stnb  demo_0.json  demo_0.stnb  demo_1.json  demo_2.json  dynamic_cell_control_demo_1.py  dynamic_cell_control_demo_1.stnb  dynamic_cell_control_demo_2.py  dynamic_cell_control_demo_2.stnb  interactive_julia_set_demo.py  interactive_julia_set_demo.stnb  interactive_plot_demo.py  interactive_plot_demo.stnb  machine_learning_demo.py  machine_learning_demo.stnb  reactive_viz_demo.py  reactive_viz_demo.stnb  stock_dashboard_demo.py
streamlit_notebook/demo_notebooks/helpers/: __init__.py
streamlit_notebook/model/: .gitignore  README.md  __init__.py  _collections_utils.py  _model.py  _model_meta.py  _typechecker.py
streamlit_notebook/shell/: __init__.py  collector.py  magics.py  shell.py  streams.py  utils.py
